[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyabc2"
authors = [{name = "zmoon", email = "zmoon92@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = "~=3.8"
dependencies = []

[project.urls]
Home = "https://github.com/zmoon/PyABC2"
Source = "https://github.com/zmoon/PyABC2"
# Documentation = ""

[project.optional-dependencies]
sources = [
    "numpy <2",
    "pandas ~=1.4",
    "requests ~=2.0",
]
peg = [
    "pyparsing ~=3.2",
]
test = [
    "mypy",
    "pandas-stubs",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
dev = [
    "ipython",
    "jupyterlab",
]


[tool.black]
line-length = 100

[tool.flake8]  # pyproject-flake8
max-line-length = 100
ignore = [
  "E203", # whitespace before ':' - doesn't work well with black
  "E402", # module level import not at top of file
  "E501", # line too long - let black worry about that
  "W503", # line break before binary operator
  "E226", # missing whitespace around arithmetic operator - not always more readable imho
]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
markers = ["slow"]

[tool.mypy]
exclude = ["^venv"]
install_types = true
ignore_missing_imports = true
