[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyabc2"
authors = [{name = "zmoon", email = "zmoon92@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = "~=3.8"
dependencies = []

[project.urls]
Home = "https://github.com/zmoon/PyABC2"
Source = "https://github.com/zmoon/PyABC2"
Documentation = "https://pyabc2.readthedocs.io"

[project.optional-dependencies]
sources = [
    "numpy <2",
    "pandas ~=1.4",
    "requests ~=2.0",
]
test = [
    "mypy",
    "pandas-stubs",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
dev = [
    "ipython",
    "jupyterlab",
]
doc = [
    "furo",
    "matplotlib",
    "myst-nb",
    "sphinx",
    "sphinx-copybutton",
    "sphinx-inline-tabs",
]


[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
markers = ["slow"]

[tool.mypy]
exclude = ["^venv"]
install_types = true
ignore_missing_imports = true

[tool.pyright]
ignore = ["pyabc2/sources/_lzstring.py"]

[tool.coverage.run]
omit = ["pyabc2/sources/_lzstring.py"]
